--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <title>وام باز</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/IMG_4897.PNG" />
+    <link rel="icon" type="image/x-icon" href="img/IMG_4897.PNG" />
 
     <link
       rel="stylesheet"
@@ -22,9 +22,9 @@
       crossorigin="anonymous"
     />
     <link rel="canonical" href="https://vambaz.com/" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/font.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/font.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -72,7 +72,7 @@
           >
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/IMG_4897.PNG"
+                src="img/IMG_4897.PNG"
                 class="img-fluid rounded-3"
                 alt=""
               />
@@ -113,7 +113,7 @@
     <!-- slider section -->
 
     <div class="card text-bg-dark border-0 rounded-0 d-none d-md-block">
-      <img src="assets/img/header 1.png" class="card-img img-fluid" alt="..." />
+      <img src="img/header 1.png" class="card-img img-fluid" alt="..." />
       <div class="card-img-overlay">
         <h1
           class="card-title slide-title display-4 fw-bold d-flex flex-lg-column align-self-center position-absolute top-custom px-lg-5 py-lg-2 ms-4 lh-base"
@@ -141,7 +141,7 @@
     </div>
 
     <section class="banner w-100 d-block d-md-none position-relative">
-      <img src="assets/img/banner-11.png" class="img-fluid" alt="" />
+      <img src="img/banner-11.png" class="img-fluid" alt="" />
 
       <div
         class="d-flex mx-5 justify-content-center align-content-center position-absolute bottom-0 mb-5 text-center"
@@ -239,7 +239,7 @@
           <div
             class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 transition-all advantage-sec flex-column text-center justify-content-center align-content-center mb-4"
           >
-            <img src="assets/img/wallet 14.png" class="img-fluid" alt="" />
+            <img src="img/wallet 14.png" class="img-fluid" alt="" />
             <p class="text-blue-600 fs-5 fw-bold mt-3">اعتبار سنجی تخصصی</p>
             <p class="text-blue-600 fs-6 text-center">
               در مجموعه ما، کارشناسانی با دانش و تجربه بالا حضور دارند که فرایند
@@ -249,7 +249,7 @@
           <div
             class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 transition-all advantage-sec flex-column text-center justify-content-center align-content-center mb-4"
           >
-            <img src="assets/img/card-mobile.png" class="img-fluid" alt="" />
+            <img src="img/card-mobile.png" class="img-fluid" alt="" />
             <p class="text-blue-600 fs-5 fw-bold mt-3">تامین امتیاز</p>
             <p class="text-blue-600 fs-6 text-center">
               برای دریافت برخی وام‌ها مانند وام رسالت، نیاز به امتیاز بانکی
@@ -260,7 +260,7 @@
           <div
             class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 transition-all advantage-sec flex-column text-center justify-content-center align-content-center mb-4"
           >
-            <img src="assets/img/cash 3.png" class="img-fluid" alt="" />
+            <img src="img/cash 3.png" class="img-fluid" alt="" />
             <p class="text-blue-600 fs-5 fw-bold mt-3">
               پیش‌پرداخت؟ بی‌خیال! یه چک کافیه واسه وام.
             </p>
@@ -274,7 +274,7 @@
             class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 transition-all advantage-sec flex-column text-center justify-content-center align-content-center mb-4"
           >
             <img
-              src="assets/img/credit-card-back.png"
+              src="img/credit-card-back.png"
               class="img-fluid"
               alt=""
             />
@@ -309,7 +309,7 @@
               >
                 هر آنچه باید درباره «وام باز» بدانید
                 <img
-                  src="assets/img/down_3.svg"
+                  src="img/down_3.svg"
                   class="img-fluid svg-img ms-1 position-absolute"
                   alt=""
                 />
@@ -373,12 +373,12 @@
             class="col-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 d-flex about-us-col align-content-stretch flex-column"
           >
             <img
-              src="assets/img/Frame 1261153416 (1).png"
+              src="img/Frame 1261153416 (1).png"
               class="img-fluid about-us-img h-100 d-lg-block d-none"
               alt=""
             />
             <img
-              src="assets/img/sm.png"
+              src="img/sm.png"
               class="img-fluid about-us-img h-100 d-block d-lg-none"
               alt=""
             />
@@ -536,41 +536,41 @@
           <div class="swiper mySwiper logo-swip mt-2 mt-lg-3 mb-50">
             <div class="swiper-wrapper logo-wrapper">
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/ansar bank.png" alt="" />
+                <img src="img/ansar bank.png" alt="" />
               </div>
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/mellat bank.png" alt="" />
+                <img src="img/mellat bank.png" alt="" />
               </div>
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/melli bank.png" alt="" />
+                <img src="img/melli bank.png" alt="" />
               </div>
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/eghtesad novin bank.png" alt="" />
+                <img src="img/eghtesad novin bank.png" alt="" />
               </div>
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/gardeshgari.png" alt="" />
+                <img src="img/gardeshgari.png" alt="" />
               </div>
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/iranzamin-bank.png" alt="" />
+                <img src="img/iranzamin-bank.png" alt="" />
               </div>
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/hekmate iranian.png" alt="" />
+                <img src="img/hekmate iranian.png" alt="" />
               </div>
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/ayandeh bank.png" alt="" />
+                <img src="img/ayandeh bank.png" alt="" />
               </div>
               <div class="swiper-slide logo-slide">
-                <img src="assets/img/dey bank.png" alt="" />
+                <img src="img/dey bank.png" alt="" />
               </div>
             </div>
             <!-- <div class="swiper-pagination"></div> -->
             <img
-              src="assets/img/backward.svg"
+              src="img/backward.svg"
               class="img-fluid swiper-button-next"
               alt=""
             />
             <img
-              src="assets/img/forwardd.svg"
+              src="img/forwardd.svg"
               class="img-fluid swiper-button-prev"
               alt=""
             />
@@ -754,7 +754,7 @@
                   data-bs-target="#staticBackdrop"
                 >
                   <img
-                    src="assets/img/Rectangle 13.png"
+                    src="img/Rectangle 13.png"
                     class="card-img-top"
                     alt="..."
                   />
@@ -835,7 +835,7 @@
                     style="width: 18rem"
                   >
                     <img
-                      src="assets/img/Rectangle 13.png"
+                      src="img/Rectangle 13.png"
                       class="card-img-top"
                       alt="..."
                     />
@@ -862,7 +862,7 @@
                     style="width: 18rem"
                   >
                     <img
-                      src="assets/img/Rectangle 13.png"
+                      src="img/Rectangle 13.png"
                       class="card-img-top"
                       alt="..."
                     />
@@ -889,7 +889,7 @@
                     style="width: 18rem"
                   >
                     <img
-                      src="assets/img/Rectangle 13.png"
+                      src="img/Rectangle 13.png"
                       class="card-img-top"
                       alt="..."
                     />
@@ -1073,7 +1073,7 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4 mb-lg-0">
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/IMG_4897.PNG"
+                src="img/IMG_4897.PNG"
                 class="img-fluid rounded-3 footer-logo"
                 alt=""
               />
@@ -1153,7 +1153,7 @@
           <div class="col-12 col-sm-12 col-md-4 mb-5">
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/footer-sm.png"
+                src="img/footer-sm.png"
                 class="img-fluid rounded-3 footer-logo"
                 alt=""
               />
@@ -1404,3 +1404,4 @@
     </script>
   </body>
 </html>
+
