--- a/loan-rates.html
+++ b/loan-rates.html
@@ -15,6 +15,37 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/font.css" />
+    <style>
+      .wrapper-custom {
+  /* border: 1px solid #000;
+  background: radial-gradient(
+    273.42% 128.44% at 78.85% 50.09%,
+    #243bcf 35.2%,
+    #101f81 100%
+  ); */
+  border: 1px solid #000;
+  background: radial-gradient(
+    152.37% 117.49% at 75.09% 16.11%,
+    #101f81 0%,
+    #243bcf 80.88%
+  );
+  align-self: stretch;
+}
+.tab-wrapper {
+  background: (#f5fbff, #f5fbff);
+}
+.bg-customize {
+  background: #f5fbff;
+}
+.sale-title {
+  display: none;
+}
+input.price::placeholder {
+  color: #2438b9;
+  font-weight: 550;
+  font-size: 14px;
+}
+    </style>
   </head>
   <body class="bg-customize">
     <!-- scroll to top button -->
@@ -903,5 +934,6 @@
     </script>
   </body>
 </html>
+
 
 
