--- a/factor.html
+++ b/factor.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>وام و امتیاز | وام باز</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/IMG_4897.PNG" />
+    <link rel="icon" type="image/x-icon" href="img/IMG_4897.PNG" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css"
       integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/css/_factor.css" />
-    <link rel="stylesheet" href="assets/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/font.css" />
+    <link rel="stylesheet" href="css/_factor.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/font.css" />
   </head>
   <body class="bg-customize">
     <!-- scroll to top button -->
@@ -57,7 +57,7 @@
           >
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/IMG_4897.PNG"
+                src="img/IMG_4897.PNG"
                 class="img-fluid rounded-3"
                 alt=""
               />
@@ -108,72 +108,7 @@
           </div>
         </div>
         <div class="row mt-5 d-flex g-4">
-          <!-- <ul
-              class="nav nav-pills mb-3 justify-content-center"
-              id="pills-tab"
-              role="tablist"
-            >
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link active px-5 py-3 blue-800 shadow-sm rounded-20 fw-700 text-white"
-                  id="pills-home-tab"
-                  data-bs-toggle="pill"
-                  data-bs-target="#pills-home"
-                  type="button"
-                  role="tab"
-                  aria-controls="pills-home"
-                  aria-selected="true"
-                >
-                  محاسبه وام
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="ms-2"
-                    width="29"
-                    height="29"
-                    viewBox="0 0 29 29"
-                    fill="none"
-                  >
-                    <path
-                      d="M25.4248 19.4606C24.6826 21.2158 23.5217 22.7625 22.0437 23.9655C20.5656 25.1684 18.8154 25.9909 16.946 26.3612C15.0766 26.7314 13.145 26.6381 11.32 26.0894C9.49501 25.5406 7.83223 24.5532 6.47702 23.2134C5.12181 21.8735 4.11545 20.2221 3.54591 18.4035C2.97636 16.5849 2.86099 14.6545 3.20986 12.781C3.55874 10.9075 4.36124 9.148 5.54722 7.65631C6.73319 6.16461 8.26653 4.98614 10.0132 4.22394M25.1798 14.9221C25.8238 14.9221 26.3523 14.3983 26.2881 13.7578C26.0192 11.0793 24.8322 8.57624 22.9285 6.67296C21.0248 4.76969 18.5215 3.58329 15.843 3.31492C15.2013 3.25075 14.6786 3.77925 14.6786 4.42325V13.7566C14.6786 14.066 14.8016 14.3628 15.0204 14.5815C15.2392 14.8003 15.5359 14.9233 15.8453 14.9233L25.1798 14.9221Z"
-                      stroke="white"
-                      stroke-width="2.33333"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link px-5 py-3 blue-800 shadow-sm rounded-20 fw-700 text-white"
-                  id="pills-profile-tab"
-                  data-bs-toggle="pill"
-                  data-bs-target="#pills-profile"
-                  type="button"
-                  role="tab"
-                  aria-controls="pills-profile"
-                  aria-selected="false"
-                >
-                  فروش امتیاز
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="ms-2"
-                    width="28"
-                    height="29"
-                    viewBox="0 0 28 29"
-                    fill="none"
-                  >
-                    <path
-                      d="M3.5 4.42218V23.0888C3.5 23.7077 3.74583 24.3012 4.18342 24.7388C4.621 25.1763 5.21449 25.4222 5.83333 25.4222H24.5M21 20.7555V11.4222M15.1667 20.7555V6.75551M9.33333 20.7555V17.2555"
-                      stroke="white"
-                      stroke-width="2.33333"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </button>
-              </li>
-            </ul> -->
+         
           <div class="btn-group">
             <a
               href="loan-rates.html"
@@ -240,7 +175,7 @@
           <div
             class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 justify-content-between text-start align-content-center"
           >
-            <img src="assets/img/Rectangle 1.png" class="img-fluid" alt="" />
+            <img src="img/Rectangle 1.png" class="img-fluid" alt="" />
           </div>
           <div
             class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 justify-content-between text-center"
@@ -525,7 +460,7 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4 mb-lg-0">
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/IMG_4897.PNG"
+                src="img/IMG_4897.PNG"
                 class="img-fluid rounded-3 footer-logo"
                 alt=""
               />
@@ -605,7 +540,7 @@
           <div class="col-12 col-sm-12 col-md-4 mb-5">
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/footer-sm.png"
+                src="img/footer-sm.png"
                 class="img-fluid rounded-3 footer-logo"
                 alt=""
               />
@@ -756,3 +691,4 @@
     </script>
   </body>
 </html>
+
