--- a/factor.html
+++ b/factor.html
@@ -14,6 +14,30 @@
     <link rel="stylesheet" href="css/_factor.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/font.css" />
+    <style>
+      .bg-customize {
+  background: #f5fbff;
+}
+.wrapper-custom {
+  border: 1px solid #000;
+  background: radial-gradient(
+    152.37% 117.49% at 75.09% 16.11%,
+    #101f81 0%,
+    #243bcf 80.88%
+  );
+  align-self: stretch;
+}
+th {
+  color: #767676;
+}
+/* .factor-wrapper {
+  height: 1311px;
+  flex-shrink: 0;
+} */
+.table-container {
+  overflow-x: auto;
+}
+    </style>
   </head>
   <body class="bg-customize">
     <!-- scroll to top button -->
@@ -691,4 +715,5 @@
     </script>
   </body>
 </html>
+
 
