--- a/factor.html
+++ b/factor.html
@@ -11,6 +11,7 @@
       integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/_factor.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/font.css" />
@@ -715,5 +716,6 @@ th {
     </script>
   </body>
 </html>
+
 
 
