--- a/about-us.html
+++ b/about-us.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>وام باز</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/IMG_4897.PNG" />
+    <link rel="icon" type="image/x-icon" href="img/IMG_4897.PNG" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css"
       integrity="sha384-DOXMLfHhQkvFFp+rWTZwVlPVqdIhpDVYT9csOnHSgWQWPX0v5MCGtjCJbY6ERspU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/css/_about-us.css" />
-    <link rel="stylesheet" href="assets/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/font.css" />
+    <link rel="stylesheet" href="css/_about-us.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/font.css" />
   </head>
   <body>
     <!-- navbar section -->
@@ -53,7 +53,7 @@
           >
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/IMG_4897.PNG"
+                src="img/IMG_4897.PNG"
                 class="img-fluid rounded-3"
                 alt=""
               />
@@ -127,56 +127,6 @@
               </p>
             </div>
           </div>
-          <!-- <div class="d-flex flex-wrap justify-content-center gap-2">
-              <div class="d-flex justify-content-center align-self-center">
-                <a
-                  class="btn contact-btn text-Blue-3 blue-600 fw-bold fs-7 shadow-sm rounded-13 text-center"
-                  href="https://t.me/Rezgods"
-                >
-                  <i class="fa-brands fa-telegram align-middle fa-lg me-2"></i>
-                  <span class="d-lg-inline d-none me-2">پشتیبانی:</span> تلگرام
-                </a>
-              </div>
-              <div class="d-flex justify-content-center align-self-center">
-                <a
-                  class="btn contact-btn text-Blue-3 blue-600 fw-bold fs-7 shadow-sm rounded-13 text-center"
-                  href="https://instagram.com/Vam_baz"
-                >
-                  <i class="fa-brands fa-instagram align-middle fa-lg me-2"></i>
-                  <span class="d-lg-inline d-none me-2">پشتیبانی:</span>
-                  اینستاگرام
-                </a>
-              </div>
-              <div class="d-flex justify-content-center align-self-center">
-                <a
-                  class="btn contact-btn text-Blue-3 blue-600 fw-bold fs-7 shadow-sm rounded-13 text-center"
-                  href="https://wa.me/09382191612"
-                >
-                  <i class="fa-brands fa-whatsapp align-middle fa-lg me-2"></i>
-                  <span class="d-lg-inline d-none me-2">پشتیبانی:</span> واتساپ
-                </a>
-              </div>
-            </div> -->
-
-          <!-- <article class="about-us-detail my-4">
-              وام های فوری و بدون سپرده در طول سال به صورت مقطعی فعال می‌شوند.
-              هر کدام از این وام ها پروسه مخصوص به خود را دارند. مشاوران شرکت ما
-              اطلاعات همه وام های فعال را به صورت به روز جمع آوری کرده و در این
-              سایت در اختیار شما قرار می‌دهند. با برقراری ارتباط با کارشناسان
-              ما، طبق شرایط شما بهترین وام را به شما پیشنهاد می‌دهند و شما
-              می‌توانید کلیه مراحل دریافت وام را با خیال راحت به ما بسپرید.
-              خدمات خرید امتیاز خدمات دریافت جدیدترین وام‌ها انجام تمامی خدمات
-              دریافت وام و…
-            </article> -->
-
-          <!-- <div
-            class="mt-4 mb-4"
-            id="map"
-            style="height: 400px; border-radius: 15px"
-          ></div> -->
-          <!-- <div class="mt-4 mb-5">
-            <img src="assets/img/about-us.png" class="img-fluid" alt="" />
-          </div> -->
         </div>
         <div
           class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 h-100 d-flex justify-content-center justify-content-lg-start align-content-center mb-4"
@@ -274,7 +224,7 @@
             </article>
           </div>
           <div class="my-4">
-            <img src="assets/img/about-us.png" class="img-fluid" alt="" />
+            <img src="img/about-us.png" class="img-fluid" alt="" />
           </div>
         </div>
       </div>
@@ -287,7 +237,7 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4 mb-lg-0">
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/IMG_4897.PNG"
+                src="img/IMG_4897.PNG"
                 class="img-fluid rounded-3 footer-logo"
                 alt=""
               />
@@ -367,7 +317,7 @@
           <div class="col-12 col-sm-12 col-md-4 mb-5">
             <a class="navbar-brand" href="index.html">
               <img
-                src="assets/img/footer-sm.png"
+                src="img/footer-sm.png"
                 class="img-fluid rounded-3 footer-logo"
                 alt=""
               />
@@ -501,3 +451,4 @@
     </script>
   </body>
 </html>
+
