--- a/about-us.html
+++ b/about-us.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/_about-us.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/font.css" />
   </head>
@@ -451,4 +452,5 @@
     </script>
   </body>
 </html>
+
 
