--- a/about-us.html
+++ b/about-us.html
@@ -15,6 +15,68 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/font.css" />
+    <style>
+      @media screen and (max-width: 992px) {
+  h2 {
+    font-size: 18px !important;
+  }
+  h5 {
+    font-size: 15px !important;
+  }
+}
+.wrapper-custom {
+  /* border: 1px solid #000;
+  background: radial-gradient(
+    273.42% 128.44% at 78.85% 50.09%,
+    #243bcf 35.2%,
+    #101f81 100%
+  ); */
+  border: 1px solid #000;
+  background: radial-gradient(
+    152.37% 117.49% at 75.09% 16.11%,
+    #101f81 0%,
+    #243bcf 80.88%
+  );
+  align-self: stretch;
+}
+.about-us-section {
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+}
+
+.about-us-detail {
+  color: #919191;
+  text-align: justify;
+  font-family: "Abar VF";
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 46px;
+}
+.address {
+  color: #919191;
+  text-align: justify;
+}
+.content-box {
+  height: 300px;
+}
+.social-btn {
+  transition: all 0.2s ease-in-out;
+  border: none;
+}
+.social-btn:hover {
+  transform: scale(1.09);
+}
+.tooltip-inner {
+  background-color: #1c2b8e;
+  color: #f5fbff;
+  border-radius: 13px;
+  padding: 10px 17px;
+  text-align: center;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  font-weight: 550;
+  font-size: 13px;
+}
+
+    </style>
   </head>
   <body>
     <!-- navbar section -->
@@ -452,5 +514,6 @@
     </script>
   </body>
 </html>
+
 
 
