--- a/about-us.html
+++ b/about-us.html
@@ -155,7 +155,7 @@
       </div>
     </header>
     <!-- title secrtion -->
-    <section class="wrapper-custom">
+    <section class="wrapper-custom p-60">
       <div class="container p-60">
         <div class="row mt-4">
           <div
@@ -514,6 +514,7 @@
     </script>
   </body>
 </html>
+
 
 
 
