--- a/about-us.html
+++ b/about-us.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/font.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
       @media screen and (max-width: 992px) {
   h2 {
@@ -514,6 +515,7 @@
     </script>
   </body>
 </html>
+
 
 
 
