--- a/loan-rates.html
+++ b/loan-rates.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/font.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
       .wrapper-custom {
   /* border: 1px solid #000;
@@ -934,6 +935,7 @@ input.price::placeholder {
     </script>
   </body>
 </html>
+
 
 
 
