--- a/factor.html
+++ b/factor.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/_factor.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/font.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
       .bg-customize {
   background: #f5fbff;
@@ -716,6 +717,7 @@ th {
     </script>
   </body>
 </html>
+
 
 
 
